# n26.pdf-converter

./: README.md  pyproject.toml
pdf_converter/: args.py  columns.py  main.py
pdf_converter/command/: journal.py  process.py  version.py
pdf_converter/journaling/: read_journal.py  save_journal.py  transform_journal.py
pdf_converter/processing/: df_category_matcher.py  df_formatter.py  pdf_parser.py
